# resumai

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md  app.py  test.sh
backend/: Cargo.toml
backend/src/: evaluate.rs  lib.rs  logging.rs  main.rs  s3.rs
frontend/: Cargo.toml  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Dropzone.js  PreviousResults.js  UploadForm.css  UploadForm.js  lib.rs  utils.js
frontend/src/components/: file_upload.rs
frontend/static/: index.html
infrastructure/: app.py  cdk.json
lambdas/api-handler/: api_handler.py
lambdas/api/src/: errors.rs  evaluate.rs
lambdas/evaluator/: Cargo.toml
lambdas/evaluator/src/: main.rs
lambdas/resumai/: Cargo.toml  Makefile
lambdas/resumai/src/: extract_text.rs  main.rs
