[package]
name = "resumai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.56.1"
aws-sdk-textract = "0.31.1"
base64 = "0.21.4"
clap = { version = "4.4.2", features = ["derive", "env"] }
llm-chain = "0.12.3"
llm-chain-openai = "0.12.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "time",
] }
